# udo_stamps

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
fixtures/: notifications.json  print_formats.json  reports.json  workflow.json  workspace.json
udo_stamps/: api.py  hooks.py  install.py  modules.txt
udo_stamps/config/: desktop.py
udo_stamps/doctype/stamp_application/: stamp_application.js  stamp_application.json  stamp_application.py
udo_stamps/doctype/stamp_application_attachment/: stamp_application_attachment.json
udo_stamps/doctype/stamp_registry/: stamp_registry.js  stamp_registry.json  stamp_registry.py
udo_stamps/tests/: test_stamps.py
